@@ -628,6 +628,7 @@ int Fl_Type::is_widget() const {return 0;}
 int Fl_Type::is_valuator() const {return 0;}
 int Fl_Type::is_spinner() const {return 0;}
 int Fl_Type::is_button() const {return 0;}
+int Fl_Type::is_input() const {return 0;}
 int Fl_Type::is_menu_item() const {return 0;}
 int Fl_Type::is_menu_button() const {return 0;}
 int Fl_Type::is_group() const {return 0;}
