@@ -2162,6 +2162,17 @@ void Fl_Widget_Type::write_widget_code() {
     write_c("%s%s->type(%d);\n", indent(), var, o->type());
   if (o->box() != tplate->box() || subclass())
     write_c("%s%s->box(FL_%s);\n", indent(), var, boxname(o->box()));
+  if (is_input()) {
+    Fl_Input_* b = (Fl_Input_*)o;
+    if (b->shortcut()) {
+			int s = b->shortcut();
+			if (use_FL_COMMAND && (s & (FL_CTRL|FL_META))) {
+		    write_c("%s%s->shortcut(FL_COMMAND|0x%x);\n", indent(), var, s & ~(FL_CTRL|FL_META));
+			} else {
+	      write_c("%s%s->shortcut(0x%x);\n", indent(), var, s);
+			}
+		}
+  }
   if (is_button()) {
     Fl_Button* b = (Fl_Button*)o;
     if (b->down_box()) write_c("%s%s->down_box(FL_%s);\n", indent(), var,
@@ -2333,6 +2344,10 @@ void Fl_Widget_Type::write_properties() {
   }
   if (o->box() != tplate->box()) {
     write_string("box"); write_word(boxname(o->box()));}
+  if (is_input()) {
+    Fl_Input_* b = (Fl_Input_*)o;
+    if (b->shortcut()) write_string("shortcut 0x%x", b->shortcut());
+  }
   if (is_button()) {
     Fl_Button* b = (Fl_Button*)o;
     if (b->down_box()) {
@@ -2524,6 +2539,8 @@ void Fl_Widget_Type::read_property(const char *c) {
     subclass(read_word());
   } else if (is_button() && !strcmp(c,"shortcut")) {
     ((Fl_Button*)o)->shortcut(strtol(read_word(),0,0));
+  } else if (is_input() && !strcmp(c,"shortcut")) {
+    ((Fl_Input_*)o)->shortcut(strtol(read_word(),0,0));
   } else {
     if (!strncmp(c,"code",4)) {
       int n = atoi(c+4);
@@ -2692,6 +2709,12 @@ void Fl_Widget_Type::copy_properties() {
     d->down_box(s->down_box());
     d->shortcut(s->shortcut());
     d->value(s->value());
+  }
+
+  // copy all attributes specific to widgets derived from Fl_Input_
+  if (is_input()) {
+    Fl_Input_* d = (Fl_Input_*)live_widget, *s = (Fl_Input_*)o;
+    d->shortcut(s->shortcut());
   }
 
   // copy all attributes specific to Fl_Valuator and derived classes
