@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.3.0
 
+        - added support for shortcuts for Fl_Input_ derived
+          widgets (STR #1770)
         - initial setup (STR #1904)
 
 CHANGES IN FLTK 1.1.9
